--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <title>Scanzu</title>
 </head>
@@ -39,12 +38,15 @@
                             <a class="nav-link my-link" href="#">How It Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link my-link" href="#"> <img src="img/shopping-cart-2-fill.png"
-                                    alt="">Cart</a>
+                            <a class="nav-link my-link" href="#"> 
+                                <svg width="17" height="17" viewBox="0 0 17 17" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M3.00327 3.81247L0.571289 1.38049L1.63195 0.319828L4.06393 2.75181H15.4952C15.9095 2.75181 16.2452 3.08759 16.2452 3.50181C16.2452 3.5748 16.2346 3.6474 16.2137 3.71731L14.4137 9.71735C14.3185 10.0345 14.0264 10.2518 13.6952 10.2518H4.50327V11.7518H12.7533V13.2518H3.75327C3.33905 13.2518 3.00327 12.916 3.00327 12.5018V3.81247ZM4.12827 16.2518C3.50695 16.2518 3.00327 15.7481 3.00327 15.1268C3.00327 14.5055 3.50695 14.0018 4.12827 14.0018C4.74959 14.0018 5.25327 14.5055 5.25327 15.1268C5.25327 15.7481 4.74959 16.2518 4.12827 16.2518ZM13.1283 16.2518C12.5069 16.2518 12.0033 15.7481 12.0033 15.1268C12.0033 14.5055 12.5069 14.0018 13.1283 14.0018C13.7496 14.0018 14.2533 14.5055 14.2533 15.1268C14.2533 15.7481 13.7496 16.2518 13.1283 16.2518Z" fill="currentcolor"/>
+                                </svg>
+                                Cart</a>
                         </li>
                     </ul>
-                    <button class="mybtn">Log In</button>
-                    <button class="mybtn1">Sign Up</button>
+                    <a class="mybtn" href="login.html">Log In</a>
+                    <a class="mybtn1" href="signUp.html">Sign Up</a>
                 </div>
             </div>
         </nav>
@@ -53,11 +55,11 @@
         <div class="container my-container">
             <div class="main row">
                 <div class="content col-md-6">
-                    <h1>Unlock Convenience with 
+                    <h1>Unlock Convenience with
                         ScanZu QR Products</h1>
                     <p>A Next Generation Communication and Tracking Technology by ScanZu. Its secure,low cost,
                         zero maintainance technology that works anywhere.</p>
-                    <button class="mybtn1">Shop Now <img src="img/arrow.png" alt=""></button>
+                    <a class="mybtn1" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
                 </div>
                 <div class="image col-md-3 offset-md-3">
                     <img src="img/QR.png" alt="">
@@ -86,7 +88,7 @@
             <p>You can add your family members in App so that visitor can reach to concerned person.</p>
             <p>Simply place a ScanZu QR where you want. That's all you need to welcome your visitors. Talk to your
                 visitors whereever you are.</p>
-            <button class="my-gbtn">Shop Now <img src="img/arrow.png" alt=""></button>
+            <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
     </div>
     <!-- smart section ended -->
@@ -102,7 +104,7 @@
                 necessary action. You can add information of your family members as well to be reached in case of
                 emergency.</p>
 
-            <button class="my-gbtn">Shop Now <img src="img/arrow.png" alt=""></button>
+            <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
         <div class="image col-lg-6 col-md-6 col-sm-12">
             <img src="img/Vehicle QR.png" alt="">
@@ -124,7 +126,7 @@
             <p>Anyone with a smartphone can scan the QR code, contact you over a call or message, and inform you about
                 your luggage,</p>
             <p>So Say Hello to secure ScanZu Luggage tag and say goodbye to the fear of lost luggage.</p>
-            <button class="my-gbtn">Shop Now <img src="img/arrow.png" alt=""></button>
+            <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
     </div>
     <!-- luggage section ended -->
@@ -140,7 +142,7 @@
                 do not wish to imagine. ScanZU Pet Tag is a sleek, durable metal tag that attaches easily to your pet's
                 collar. It securely ensure that you can be contacted instantly if anyone find your wandering pet.</p>
 
-            <button class="my-gbtn">Shop Now <img src="img/arrow.png" alt=""></button>
+            <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
         <div class="image col-lg-6 col-md-6 col-sm-12">
             <img src="img/Pet tag.png" alt="">
@@ -228,30 +230,98 @@
         <h1>Real Stories, Real Satisfaction</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.</p>
-        <div class="row my-wrapper">
-            <div class="mycard col-md-3">
-                <img src="img/double-quotes-l.png" alt="">
-                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-                    aliquid ex ea commodi</p>
-                <img src="img/Ellipse 1.png" alt="">
-                <h4>Kathryn Murphy</h4>
-                <p>lorem ipsum</p>
-            </div>
-            <div class="mycard col-md-3">
-                <img src="img/double-quotes-l.png" alt="">
-                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-                    aliquid ex ea commodi</p>
-                <img src="img/Ellipse 2.png" alt="">
-                <h4>Brooklyn Simmons</h4>
-                <p>lorem ipsum</p>
-            </div>
-            <div class="mycard col-md-3">
-                <img src="img/double-quotes-l.png" alt="">
-                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-                    aliquid ex ea commodi</p>
-                <img src="img/Ellipse 3.png" alt="">
-                <h4>Savannah Nguyen</h4>
-                <p>lorem ipsum</p>
+       
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="mycard">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 1.png" alt="">
+                        <h4>Kathryn Murphy</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 2.png" alt="">
+                        <h4>Brooklyn Simmons</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 3.png" alt="">
+                        <h4>Savannah Nguyen</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard col-md-3">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 3.png" alt="">
+                        <h4>Savannah Nguyen</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 1.png" alt="">
+                        <h4>Kathryn Murphy</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard col-md-3">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 3.png" alt="">
+                        <h4>Savannah Nguyen</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 2.png" alt="">
+                        <h4>Brooklyn Simmons</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="mycard">
+                        <img src="img/double-quotes-l.png" alt="">
+                        <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+                            nisi ut
+                            aliquid ex ea commodi</p>
+                        <img src="img/Ellipse 3.png" alt="">
+                        <h4>Savannah Nguyen</h4>
+                        <p>lorem ipsum</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
@@ -274,18 +344,9 @@
     </footer>
 
     <!-- footer section ended -->
-    <script>
-        let navBar = document.getElementById("my-nav");
-        window.onscroll = function () {
-            if (window.scrollY > 22) {
-                navBar.classList.add("scrolled");
-            } else {
-                navBar.classList.remove("scrolled");
-            }
-        };
-
-    </script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script defer src="js/bootstrap.min.js"></script>
+   <script src="js/script.js"></script>
 </body>
 
 </html>
