--- a/fpassword.html
+++ b/fpassword.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- navigation section started -->
-        <nav class="navbar navbar-expand-lg navbar-light myscrolled" >
+        <nav class="navbar navbar-expand-lg navbar-light sscrolled" >
             <div class="container-fluid my-container ">
                 <a class="navbar-brand my-logo" href="#"><img src="img/Logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -60,7 +60,7 @@
             <!-- <p>Don’t have an account? <a href="signup.html" class="sign">Sign Up</a></p> -->
         </div>
     </div>
-    <footer class="myfooter">
+    <footer>
         <div class="row my-container">
             <div class="social">
                 <a href="#"><img src="img/Facebook - Negative.png" alt=""></a>
