--- a/cpassword.html
+++ b/cpassword.html
@@ -22,7 +22,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse my-navbar" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto anav mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
                         </li>
@@ -48,7 +48,7 @@
 
     <div class="main container my-container">
         <div class="row center">
-            <h1>Set New Password</h1>
+            <h1 class="big-heading">Set New Password</h1>
             <p>Your new password must be different from last password.</p>
             
             <div class="inputbox icon">
