--- a/fpassword.html
+++ b/fpassword.html
@@ -48,7 +48,7 @@
 
     <div class="main container my-container">
         <div class="row center">
-            <h1>Forgot Password</h1>
+            <h1 class="big-heading">Forgot Password</h1>
             <p>No worries, we’ll send you confirmation OTP</p>
             <div class="inputbox">
                 
