--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p>Using our Secured GeoLocation functionality, ScanZu QR can be configured to be activated only if visitor
                 is at your doorbell.</p>
             <p>You can add your family members in App so that visitor can reach to concerned person.</p>
-            <p>Simply place a ScanZu QR where you want. That's all you need to welcome your visitors. Talk to your
+            <p class="bottom">Simply place a ScanZu QR where you want. That's all you need to welcome your visitors. Talk to your
                 visitors whereever you are.</p>
             <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
@@ -98,7 +98,7 @@
         <div class="content col-lg-6 col-md-6 col-sm-12">
             <h4>Vehicle QR Tag</h4>
             <h1>Instant Access to Your Vehicle's Vital Information</h1>
-            <p>ScanZu Vehicle tag placed on your vehicle helps people to connect with you in case of wrong parking,
+            <p class="bottom">ScanZu Vehicle tag placed on your vehicle helps people to connect with you in case of wrong parking,
                 accident or roadside assistance. The user parks their vehicle at any spot which might be a reason or
                 issue for someone. With the help of ScanZu Vehicle QR tag, the person can quickly contact you to take
                 necessary action. You can add information of your family members as well to be reached in case of
@@ -125,7 +125,7 @@
                 personal details.</p>
             <p>Anyone with a smartphone can scan the QR code, contact you over a call or message, and inform you about
                 your luggage,</p>
-            <p>So Say Hello to secure ScanZu Luggage tag and say goodbye to the fear of lost luggage.</p>
+            <p class="bottom">So Say Hello to secure ScanZu Luggage tag and say goodbye to the fear of lost luggage.</p>
             <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
     </div>
@@ -138,7 +138,7 @@
             <h4>Pet QR Tag</h4>
             <h1>Your Pet's Best Friend <br>
                 in an Emergency</h1>
-            <p>Our pet mean so much to us, and the thought of them one day getting lost is something we would all rather
+            <p class="bottom">Our pet mean so much to us, and the thought of them one day getting lost is something we would all rather
                 do not wish to imagine. ScanZU Pet Tag is a sleek, durable metal tag that attaches easily to your pet's
                 collar. It securely ensure that you can be contacted instantly if anyone find your wandering pet.</p>
 
