--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
                     </ul>
                     
                     <a class="mybtn" href="login.html">Log In</a>
-                    <!-- <a class="mybtn1" href="#">Sign Up</a> -->
+                    <a class="mybtn1" href="#">Sign Up</a>
                 </div>
             </div>
         </nav>
@@ -48,7 +48,7 @@
 
     <div class="smain container my-container">
         <div class="row center">
-            <h1>Let’s Get Started!</h1>
+            <h1 class="big-heading">Let’s Get Started!</h1>
             <p>Sign Up with your email or mobile number</p>
             <div class="inputbox">
             <input type="text" placeholder="Enter full name" >
