--- a/verify.html
+++ b/verify.html
@@ -48,7 +48,7 @@
 
     <div class="vmain container my-container">
         <div class="row center">
-            <h1>Verify Your Email</h1>
+            <h1 class="big-heading">Verify Your Email</h1>
             <p>We have sent a 6 digit OTP</p>
             <div class="inputbox">
             <input type="number">
