--- a/myaccount.html
+++ b/myaccount.html
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse my-navbar" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto anav mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
                         </li>
@@ -43,7 +43,7 @@
                                 </svg>
                                 Cart</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item dropdown">
                             <a class="nav-link my-link" href="#">
                                 My Account
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="currentcolor"
@@ -54,6 +54,20 @@
                                 </svg>
 
                             </a>
+                            <div class="dropdown-content">
+                                <ul>
+                                    <li>
+                                        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="21" viewBox="0 0 16 21" fill="none">
+                                            <path d="M16 21H0V19C0 16.2386 2.23858 14 5 14H11C13.7614 14 16 16.2386 16 19V21ZM8 12C4.68629 12 2 9.3137 2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6C14 9.3137 11.3137 12 8 12Z" fill="#575757"/>
+                                            </svg> My Account</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none">
+                                            <path d="M1 0H15C15.5523 0 16 0.44772 16 1V19C16 19.5523 15.5523 20 15 20H1C0.44772 20 0 19.5523 0 19V1C0 0.44772 0.44772 0 1 0ZM5 9V6L0 10L5 14V11H11V9H5Z" fill="#575757"/>
+                                            </svg> Log Out</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
 
