--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse my-navbar" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse my-navbar my-t-nav" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
@@ -349,6 +349,30 @@
     <!-- footer section ended -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script defer src="js/bootstrap.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+    slidesPerView: 3,
+    spaceBetween: 30,
+    autoplay: true,
+    loop: true,
+    grabCursor: true,
+    pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+    },
+    breakpoints: {
+        0: {
+            slidesPerView: 1,
+        },
+        580: {
+            slidesPerView: 2,
+        },
+        990: {
+            slidesPerView: 3,
+        },
+    }
+});
+    </script>
    <script src="js/script.js"></script>
 </body>
 
