--- a/cpassword.html
+++ b/cpassword.html
@@ -22,7 +22,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse my-navbar" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto anav mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
                         </li>
