--- a/fpassword.html
+++ b/fpassword.html
@@ -46,7 +46,7 @@
         <!-- navigation section ended -->
     </header>
 
-    <div class="main container my-container">
+    <div class="main fmain container my-container">
         <div class="row center">
             <h1 class="big-heading">Forgot Password</h1>
             <p>No worries, we’ll send you confirmation OTP</p>
