--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
         <!-- navigation section ended -->
     </header>
 
-    <div class="main container my-container">
+    <div class="smain container my-container">
         <div class="row center">
             <h1 class="big-heading">Welcome Back!</h1>
             <p>Log In with your email or mobile number & password</p>
