--- a/Home.html
+++ b/Home.html
@@ -159,13 +159,13 @@
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseOne">
                         1. What is ScanZu?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
                     aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <p>ScanZu is a QR code Smart Doorbell system, that instantly lets you know who is at the door no
@@ -178,12 +178,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
+                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseTwo">
                         2. Do Visitors need to install any App to use my ScanZu?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show"
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                     aria-labelledby="panelsStayOpen-headingTwo">
                     <div class="accordion-body">
                         <p>ScanZu is designed to be compatible with any smartphone that can read QR codes. Your visitors
@@ -200,7 +200,7 @@
                         3. How do I get the ScanZu kit?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show"
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                     aria-labelledby="panelsStayOpen-headingThree">
                     <div class="accordion-body">
                         <p>To order a ScanZu QR kit, simply login to ScanZu website or app and order. We are also
@@ -233,7 +233,6 @@
         <h1 class="big-heading">Real Stories, Real Satisfaction</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.</p>
-       
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -340,7 +339,7 @@
                 <a href="#">contact</a>
             </div>
             <div class="flogo">
-                <img src="img/Logo Color.png" alt="">
+                <img src="img/Logo.png" alt="">
             </div>
             <p>Copyright © 2023 Scanzu All Rights Reserved</p>
         </div>
