--- a/checkout.html
+++ b/checkout.html
@@ -92,12 +92,12 @@
                                 <p>₹1200.00</p>
                                 <div class="count">
                                     <a href="#"><svg id="decreaseButton" xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" fill="none">
-                                        <rect x="0.0446777" y="0.0447998" width="31.9701" height="31.9701" rx="15.9851" fill="#541BD5"/>
+                                        <rect x="0.0446777" y="0.0447998" width="31.9701" height="31.9701" rx="15.9851" fill="#1674BA"/>
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10.3209 16.6642H21.7388C22.0891 16.6642 22.3731 16.3802 22.3731 16.0298C22.3731 15.6795 22.0891 15.3955 21.7388 15.3955H10.3209C9.97052 15.3955 9.68652 15.6795 9.68652 16.0298C9.68652 16.3802 9.97052 16.6642 10.3209 16.6642Z" fill="white"/>
                                         </svg></a>
                                     <p id="numberDisplay">1</p>
                                     <a href="#"><svg id="increaseButton" xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" fill="none">
-                                        <rect x="0.985107" y="0.0447998" width="31.9701" height="31.9701" rx="15.9851" fill="#541BD5"/>
+                                        <rect x="0.985107" y="0.0447998" width="31.9701" height="31.9701" rx="15.9851" fill="#1674BA"/>
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M16.3362 15.3955V10.3209C16.3362 9.97052 16.6202 9.68652 16.9705 9.68652C17.3208 9.68652 17.6048 9.97052 17.6048 10.3209V15.3955H22.6794C23.0298 15.3955 23.3138 15.6795 23.3138 16.0298C23.3138 16.3801 23.0298 16.6641 22.6794 16.6641H17.6048V21.7388C17.6048 22.0891 17.3208 22.3731 16.9705 22.3731C16.6202 22.3731 16.3362 22.0891 16.3362 21.7388V16.6641H11.2615C10.9112 16.6641 10.6272 16.3801 10.6272 16.0298C10.6272 15.6795 10.9112 15.3955 11.2615 15.3955H16.3362Z" fill="white"/>
                                         </svg></a>
                                 </div>
