--- a/works.html
+++ b/works.html
@@ -148,19 +148,45 @@
     </div>
 
 
-    <footer>
-        <div class="row my-container">
-            <div class="social">
-                <a href="#"><img src="img/Facebook - Negative.png" alt=""></a>
-                <a href="#"><img src="img/Instagram - Negative.png" alt=""></a>
-                <a href="#"><img src="img/LinkedIn - Negative.png" alt=""></a>
-                <a href="#">About</a>
-                <a href="#">contact</a>
-            </div>
-            <div class="flogo">
+   <footer>
+        <div class=" my-container f-footer">
+            <div class="logo">
                 <img src="img/Logo Color.png" alt="">
             </div>
-            <p>Copyright © 2023 Scanzu All Rights Reserved</p>
+            <div class="mission">
+                <div class="text">
+                    <h4>
+                        Mission
+                    </h4>
+                    <p>To upgrade doorbells with DoorVi from every house in the world providing convenience and the
+                        peace of mind added security</p>
+                </div>
+                <div class="follow">
+                    <h4>Follow Us</h4>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="about">
+                <h4>Address</h4>
+                <p>6 Floor Tower A, Office No 602, The I Thum Tower, A-40, Sector-62, Noida, Gautam Buddha Nagar, Uttar
+                    Pradesh, 201309</p>
+            </div>
+            <div class="u-link">
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                    <li><a href="#">Shipping & Delivery</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row my-container">
+
+            <p>Copyright © 2023 Scanzu All Rights Reserved.</p>
         </div>
     </footer>
 
