--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p>You can add your family members in App so that visitor can reach to concerned person.</p>
             <p class="bottom">Simply place a ScanZu QR where you want. That's all you need to welcome your visitors. Talk to your
                 visitors whereever you are.</p>
-            <a class="my-gbtn" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
+            <a class="my-gbtn" href="./editqr.html">Shop Now <img src="img/arrow.png" alt=""></a>
         </div>
     </div>
     <!-- smart section ended -->
