--- a/cart.html
+++ b/cart.html
@@ -28,13 +28,13 @@
                 <div class="collapse navbar-collapse my-navbar" id="navbarSupportedContent">
                     <ul class="navbar-nav anav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
+                            <a class="nav-link my-link" aria-current="page" href="./myorder.html">Order QR</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link my-link" href="#">How It Works</a>
+                            <a class="nav-link my-link" href="./works.html">How It Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link my-link" href="#">
+                            <a class="nav-link my-link" href="./cart.html">
                                 <svg width="17" height="17" viewBox="0 0 17 17" fill="currentcolor"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -44,7 +44,7 @@
                                 Cart</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link my-link" href="#">
+                            <a class="nav-link my-link" href="./myaccount.html">
                                 My Account
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="currentcolor"
                                     xmlns="http://www.w3.org/2000/svg">
