--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <div class="collapse navbar-collapse my-navbar my-t-nav" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link my-link" aria-current="page" href="#">Order QR</a>
+                            <a class="nav-link my-link" aria-current="page" href="./myorder.html">Order QR</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link my-link" href="#">How It Works</a>
+                            <a class="nav-link my-link" href="./works.html">How It Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link my-link" href="#"> 
+                            <a class="nav-link my-link" href="./cart.html"> 
                                 <svg width="17" height="17" viewBox="0 0 17 17" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M3.00327 3.81247L0.571289 1.38049L1.63195 0.319828L4.06393 2.75181H15.4952C15.9095 2.75181 16.2452 3.08759 16.2452 3.50181C16.2452 3.5748 16.2346 3.6474 16.2137 3.71731L14.4137 9.71735C14.3185 10.0345 14.0264 10.2518 13.6952 10.2518H4.50327V11.7518H12.7533V13.2518H3.75327C3.33905 13.2518 3.00327 12.916 3.00327 12.5018V3.81247ZM4.12827 16.2518C3.50695 16.2518 3.00327 15.7481 3.00327 15.1268C3.00327 14.5055 3.50695 14.0018 4.12827 14.0018C4.74959 14.0018 5.25327 14.5055 5.25327 15.1268C5.25327 15.7481 4.74959 16.2518 4.12827 16.2518ZM13.1283 16.2518C12.5069 16.2518 12.0033 15.7481 12.0033 15.1268C12.0033 14.5055 12.5069 14.0018 13.1283 14.0018C13.7496 14.0018 14.2533 14.5055 14.2533 15.1268C14.2533 15.7481 13.7496 16.2518 13.1283 16.2518Z" fill="currentcolor"/>
                                 </svg>
@@ -62,7 +62,7 @@
                         ScanZu QR Products</h1>
                     <p>A Next Generation Communication and Tracking Technology by ScanZu. Its secure,low cost,
                         zero maintainance technology that works anywhere.</p>
-                    <a class="mybtn1" href="#">Shop Now <img src="img/arrow.png" alt=""></a>
+                    <a class="mybtn1" href="./productlist.html">Shop Now <img src="img/arrow.png" alt=""></a>
                 </div>
                 <div class="image col-md-3 offset-md-3">
                     <img src="img/QR.png" alt="">
@@ -357,11 +357,11 @@
             </div>
             <div class="u-link">
                 <ul>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Refund Policy</a></li>
-                    <li><a href="#">Shipping & Delivery</a></li>
+                    <li><a href="./policy.html">Privacy Policy</a></li>
+                    <li><a href="./t&c.html">Terms & Conditions</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./Refund.html">Refund Policy</a></li>
+                    <li><a href="./shopping.html">Shipping & Delivery</a></li>
                 </ul>
             </div>
         </div>
