--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
                                 Cart</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link my-link" href="./myaccount.html">
+                            <a class="nav-link my-link" href="">
                                 My Account
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="currentcolor"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -57,7 +57,7 @@
                             <div class="dropdown-content">
                                 <ul>
                                     <li>
-                                        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 21" fill="none">
+                                        <a href="./myaccount.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 21" fill="none">
                                             <path d="M16 21H0V19C0 16.2386 2.23858 14 5 14H11C13.7614 14 16 16.2386 16 19V21ZM8 12C4.68629 12 2 9.3137 2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6C14 9.3137 11.3137 12 8 12Z" fill="#575757"/>
                                             </svg> My Account</a>
                                     </li>
